--- a/Vine_Review_Analysis.ipynb
+++ b/Vine_Review_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "4fc5ea5c",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "44091b5e",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
        "4                 Y  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "id": "ffb5c3c9",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
        "[72587 rows x 6 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "id": "4e37d3a0",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,7 @@
        "[65581 rows x 6 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "id": "86a65a37",
    "metadata": {},
    "outputs": [
@@ -666,7 +666,7 @@
        "[613 rows x 6 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,14 +675,14 @@
     "#Filter the DataFrame or table created in Step 2, and create a new DataFrame or table that retrieves \n",
     "#all the rows where a review was written as part of the Vine program (paid), vine == 'Y'.\n",
     "\n",
-    "\n",
     "paid_vine_program_df = helpful_votes_df[(helpful_votes_df[\"vine\"] == \"Y\")]\n",
+    "#paid_vine_program_df.count()\n",
     "paid_vine_program_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "id": "26b7f015",
    "metadata": {},
    "outputs": [
@@ -850,7 +850,7 @@
        "[64968 rows x 6 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,14 +858,13 @@
    "source": [
     "#Repeat Step 3, but this time retrieve all the rows where the review was not part of the Vine program (unpaid), vine == 'N'.\n",
     "unpaid_vine_program_df = helpful_votes_df[(helpful_votes_df[\"vine\"] == \"N\")]\n",
-    "unpaid_vine_program_df\n",
-    "\n",
-    "\n"
+    "#unpaid_vine_program_df.count()\n",
+    "unpaid_vine_program_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "id": "689a1e95",
    "metadata": {},
    "outputs": [
@@ -873,23 +872,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of reviews 9001883\n",
-      "Total number of 5-star reviews 4699957\n",
-      "Total number of 5-star reviews of paid vine program Series([], dtype: int64)\n"
+      "200\n",
+      "613\n",
+      "32.62642740619902\n"
      ]
     }
    ],
    "source": [
     "#Determine the total number of reviews, the number of 5-star reviews, \n",
     "#and the percentage of 5-star reviews for the two types of review (paid vs unpaid).\n",
-    "print(\"Total number of reviews\", vine_table[\"star_rating\"].count())\n",
-    "print(\"Total number of 5-star reviews\", vine_table[(vine_table[\"star_rating\"] == 5)][\"star_rating\"].count())\n",
-    "print(\"Total number of 5-star reviews of paid vine program\", \n",
-    "      paid_vine_program_df.filter(\"star_rating == 5\").count())\n",
     "\n",
+    "paid_five_star_number = paid_vine_program_df.loc[(paid_vine_program_df['star_rating']==5)][\"star_rating\"].count()\n",
     "\n",
-    "# unpaid_df = unpaid_vine_program_df[(unpaid_vine_program_df[\"star_rating\"] == 5)][\"star_rating\"].count()\n",
-    "# print(unpaid_df)\n"
+    "paid_number = paid_vine_program_df[\"star_rating\"].count()\n",
+    "\n",
+    "pecentage_five_star_vine = paid_five_star_number / paid_number * 100\n",
+    "\n",
+    "#Print results\n",
+    "print(paid_five_star_number)\n",
+    "print(paid_number)\n",
+    "print(pecentage_five_star_vine)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9b83bc33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28842\n",
+      "64968\n",
+      "44.39416328038419\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Determine the total number of reviews, the number of 5-star reviews, \n",
+    "#and the percentage of 5-star reviews for the two types of review (paid vs unpaid).\n",
+    "\n",
+    "unpaid_five_star_number = unpaid_vine_program_df.loc[(unpaid_vine_program_df['star_rating']==5)][\"star_rating\"].count()\n",
+    "\n",
+    "unpaid_number = unpaid_vine_program_df[\"star_rating\"].count()\n",
+    "\n",
+    "unpecentage_five_star_vine = unpaid_five_star_number / unpaid_number * 100\n",
+    "\n",
+    "#Print results\n",
+    "print(unpaid_five_star_number)\n",
+    "print(unpaid_number)\n",
+    "print(unpecentage_five_star_vine)"
    ]
   },
   {
